--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>buyumbreonscheap.com</title>
     <!-- Adding FontAwesome -->
