--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- My Custom Stylesheet -->
     <link rel="stylesheet" href="style.css">
+
+<meta name="apple-mobile-web-app-title" content="buyumbreonscheap">
+<meta property="og:site_name" content="buyumbreonscheap">
+<meta property="og:type" content="website">
+<meta name="theme-color" content="#6CC312">
+<meta property="og:title" content="Nytsense">
+<meta property="og:description" content="buy umbreons cheap for sex work or slave work ">
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/1198222626443755571/1235152279166910504/image_2.png">
+<meta property="twitter:title" content="buyumbreonscheap">
+<meta property="og:url" content="http://buyumbreonscheap.com/">
+
+<link href="/favicon.ico" rel="icon">
+<link href="/favicon.ico" rel="shortcut icon">
   </head>
+
+
 
   <body style="background-color:powderblue;">
 
