--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!--
+	Created by @Nyt
+	https://instagram.com/i_nytmare 
+
+	Copyright 2024 (c) Nytsense Enterprise
+	All Rights Reserved.
+
+	NOTICE:  All information contained herein is, and remains
+	the property of Nytsense. The intellectual and technical
+	concepts contained herein are proprietary to Nytsense and may be
+	covered by U.S. and Foreign Patents, patents in process, and are
+	protected by trade secret or copyright law.
+	Dissemination of this information or reproduction of this material
+	is strictly forbidden unless prior written permission is obtained
+	from Nytsense
+
+	Contact:
+	www.Nytsense.com
+	contact@nytsense.com
+-->
+
+
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
