--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <meta name="apple-mobile-web-app-title" content="buyumbreonscheap">
 <meta property="og:site_name" content="buyumbreonscheap">
 <meta property="og:type" content="website">
-<meta name="theme-color" content="#6CC312">
-<meta property="og:title" content="Nytsense">
+<meta name="theme-color" content="#2088AB">
+<meta property="og:title" content="buyumbreonscheap">
 <meta property="og:description" content="buy umbreons cheap for sex work or slave work ">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/1198222626443755571/1235152279166910504/image_2.png">
 <meta property="twitter:title" content="buyumbreonscheap">
